@@ -19,7 +19,6 @@ jobs:
         run: |
           curl -L https://cpanmin.us > cpanm
           perl cpanm git://github.com/Akron/Mojolicious-Plugin-Localize.git
-          perl cpanm git://github.com/Akron/Mojolicious-Plugin-TagHelpers-ContentBlock.git
           perl cpanm --installdeps .
       - name: Run Tests
         run: prove -lr t/
